--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@
             marker._icon.style.animation = "bounceMarker 1s ease-out";
         });
 
-        // Welcome popup
-        const welcomePopup = L.popup()
-            .setLatLng([25.1971068, 55.276678])
-            .setContent('<b>Welcome to KFC UAE!</b><br>Click "Find Nearest Store" to locate the nearest KFC.')
-            .openOn(map);
+// Welcome popup with increased size
+const welcomePopup = L.popup()
+    .setLatLng([25.1971068, 55.276678])
+    .setContent('<div style="font-size: 1.5em; width: 300px; padding: 20px;"><b>Welcome to KFC UAE!</b><br>Click "Find Nearest Store" to locate the nearest KFC and grab your special offer from those stores.</div>')
+    .openOn(map);
 
         // Smooth map interaction
         map.scrollWheelZoom.enable();
