--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KFC Stores UAE</title>
+    <title>KFC STORES UAE</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
         body {
@@ -161,7 +161,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>KFC Stores UAE</h1>
+        <h1>KFC STORES UAE</h1>
         <button id="nearest-store-button" onclick="getLocation()">Find Nearest Store</button>
     </div>
     <div id="map"></div>
